dataset1235/2025-2/805158916/users/2597070668/executions/1584167357_1319609354.log
== SUBMISSION (2025-08-27 14:35:31)
-- CODE: 
n1 = float(input("digite um numero: "))
n2 = float(input("digite outro: ))

media = (n1 + n2 ) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:06)
-- CODE: 
n1 = float(input("Digite um número: "))
n2 = float(input("Digite outro: ))

media = (n1 + n2 ) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:35:33)
-- CODE: 
n1 = float(input("digite um numero: "))
n2 = float(input("digite outro: ))

media = (n1 + n2 ) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:35:15)
-- CODE: 
n1 = float(input("digite um numero: "))
n2 = float(input("digite outro: ))

media = (n1 + n2 / 2)
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:36:17)
-- CODE: 
n1 = float(input("Digite um número: "))
n2 = float(input("Digite outro: " ))

media = (n1 + n2 ) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
Digite um número: Digite outro: 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
Digite um número: Digite outro: 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
Digite um número: Digite outro: 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
Digite um número: Digite outro: 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
Digite um número: Digite outro: 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
Digite um número: Digite outro: 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:35:50)
-- CODE: 
n1 = float(input("Digite um numero: "))
n2 = float(input("Digite outro: ))

media = (n1 + n2 ) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input("Digite outro: ))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:36:16)
-- CODE: 
n1 = float(input("Digite um número: "))
n2 = float(input("Digite outro: " ))

media = (n1 + n2 ) / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
Digite um número: Digite outro: 5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
Digite um número: Digite outro: 9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
Digite um número: Digite outro: 9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
Digite um número: Digite outro: 7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
Digite um número: Digite outro: 8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
Digite um número: Digite outro: 5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
